handled edge cases and updated swagger doc
